<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:background="@drawable/win_final">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="9">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/all_clear"
                android:textColor="#000000"
                android:textSize="80sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_levels"
                    android:contentDescription="@string/go_to_levels_overview_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/level_selection"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_corners_button"
                    android:gravity="center"
                    android:layout_marginStart="30dp"/>
                <View
                    android:layout_width="50dp"
                    android:layout_height="0dp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_next_level"
                    android:contentDescription="@string/go_to_next_level_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/next_level"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_corners_button"
                    android:gravity="center"
                    android:layout_marginEnd="30dp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>