<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/singleplayer_full_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:background="@drawable/categorybackground">

        <LinearLayout
            android:id="@+id/singleplayer_info_top_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_back_ingame"
                android:contentDescription="@string/exit_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/back_button">

            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/label_of_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/test"
                android:textColor="#000000"
                android:textSize="30sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/singleplayer_image_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_weight="5">


            <RelativeLayout
                android:id="@+id/buttonLayoutRelative"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonWrong"
                    android:contentDescription="@string/wrong_found_object_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonForObject"
                    android:contentDescription="@string/find_object_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/singleplayer_info_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAvatar"
                android:contentDescription="@string/avatar_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:foreground="@drawable/avatar_final_mirrored">

            </androidx.appcompat.widget.AppCompatButton>

            <TextView
                android:id="@+id/textviewSpeech"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp"/>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/singleplayer_bottom_ad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <FrameLayout
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adViewContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-2477791478485674/4815888304"/>

        </FrameLayout>

    </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>